# getem

./: .gitignore  Makefile  README.md
docs/: TS_CLI_idea.md  available_methods.md  embeddings_and_full_agents.md  icp-devnet-identities.md
docs/calimero/: node_output.md
docs/ideas/TS-cli-idea/: api_testing.md  node_api_testing.md
exp/easy-file-exchange-app/: Cargo.toml
exp/easy-file-exchange-app/src/: lib.rs  main.rs
exp/embedding-app/: Cargo.toml
exp/embedding-app/src/: embedding.rs  lib.rs  main.rs
exp/embedding-app/tests/: basic_test.rs
exp/file-exchange-app/: Cargo.toml  README.md
exp/file-exchange-app/docs/: repr.rs.md
exp/file-exchange-app/src/: file_upload.rs  key.rs  lib.rs  repr.rs  tests.rs
exp/rust_embeddings_generator/: requirements.txt
exp/rust_embeddings_generator/raw_data/: dante_inferno.txt  shakespeare_othello.txt
exp/rust_embeddings_generator/scripts/: dante_inferno_embeddings.json  dante_inferno_embeddings_generator.py
src/backend/: Cargo.toml  build.sh  deploy_devnet_fresh.sh  dfx.json
src/backend/res/: hello_app.wasm
src/backend/src/: lib.rs
src/frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
src/frontend/src/: App.tsx  index.css
src/frontend/src/api/: clientApi.ts  contractApi.ts
src/frontend/src/components/: Actions.tsx  ContentWrapper.tsx
src/logic/: Cargo.toml  Setup.md  build.sh
src/logic/res/: exchange_app.wasm
src/logic/src/: lib.rs  original_lib.rs
tools/: deploy_devnet.sh  dfx.json  init_and_run_nodes.sh
tools/context-proxy/external_getem/: Cargo.toml  build.sh
tools/embeddings_generator/: embeddings.json  generator.py
tools/model_converter/: README.md  convert_to_onnx.py  requirements.txt
(+13 files in other folders)
