[package]
name = "embedding-app"
version = "0.1.0"
edition = "2021"

[dependencies]
onnxruntime = "0.0.14"  # Updated to latest available version
tokenizers = "0.15.0"
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }  # Added for CLI support
ndarray = "0.15"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5"
