# [package]
# name = "hello-app"
# version = "0.1.0"
# edition = "2021"

# [dependencies]

[package]
name = "hello-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # This is the default when using it for caliimero 



[dependencies]
calimero-sdk = { git = "https://github.com/calimero-network/core" }
calimero-storage = { git = "https://github.com/calimero-network/core" }
# calimero-sdk = { path = "../../../calimero-core/crates/sdk" }
# calimero-storage = { path = "../../../calimero-core/crates/storage" }
[profile.app-release]
inherits = "release"
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

